--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       POSTGRES_PASSWORD: postgres
     ports:
       - "5432:5432"
-  web:
-    build: .
+  api:
+    build: './django-backend'
     image: fecnxg
     command: python manage.py runserver 0.0.0.0:8080
     volumes:
@@ -29,3 +29,12 @@ services:
       - ./django-backend:/opt/nxg_fec
     depends_on:
       - db
+  web:
+    build: './front-end'
+    restart: always
+    volumes:
+      - ./front-end/app/dist/out/:/usr/share/nginx/html
+    ports:
+      - "80:80"
+    depends_on:
+      - api
