--- a/django-backend/Dockerfile
+++ b/django-backend/Dockerfile
@@ -2,7 +2,6 @@ FROM python:3
 ENV PYTHONUNBUFFERED 1
 RUN mkdir /opt/nxg_fec
 WORKDIR /opt/nxg_fec
-ADD django-backend/* /opt/nxg_fec/
+ADD . /opt/nxg_fec/
 RUN pip install -r requirements.txt
-ADD ./django-backend /opt/nxg_fec/
-
+ADD . /opt/nxg_fec/
