--- a/front-end/angular.json
+++ b/front-end/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "fec-eFilling": {
+    "fec-eFiling": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/fec-eFilling",
+            "outputPath": "dist/fec-eFiling",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -51,18 +51,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "fec-eFilling:build"
+            "browserTarget": "fec-eFiling:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "fec-eFilling:build:production"
+              "browserTarget": "fec-eFiling:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "fec-eFilling:build"
+            "browserTarget": "fec-eFiling:build"
           }
         },
         "test": {
@@ -96,7 +96,7 @@
         }
       }
     },
-    "fec-eFilling-e2e": {
+    "fec-eFiling-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -104,11 +104,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "fec-eFilling:serve"
+            "devServerTarget": "fec-eFiling:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "fec-eFilling:serve:production"
+              "devServerTarget": "fec-eFiling:serve:production"
             }
           }
         },
@@ -124,7 +124,7 @@
       }
     }
   },
-  "defaultProject": "fec-eFilling",
+  "defaultProject": "fec-eFiling",
   "schematics": {
     "@schematics/angular:component": {
       "styleext": "scss"
