--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -1,3 +1,3 @@
 FROM nginx:latest
-COPY ./dist/fec-eFilling/ /usr/share/nginx/html
+COPY ./dist/fec-eFiling/ /usr/share/nginx/html
 COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
