--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,59 @@
+*~
+*.egg-info
+*.EGG-INFO
+*.log
+*.pot
+*.pyc
+*.pyo
+build/
+dist/
+helloworld.db
+local_settings.py
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# compiled output
+/dist
+/tmp
+/out-tsc
+
+# dependencies
+*/node_modules
+
+# IDEs and editors
+*.idea
+*.project
+*.classpath
+*.c9/
+*.launch
+*.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+.env
+
+### Bower ###
+*/bower_components
+*.bower-cache
+*.bower-registry
+*.bower-tmp
+
+
+
 # System Files
 .DS_Store
 Thumbs.db
-.class
