added reason field

--- a/django-backend/Dockerfile
+++ b/django-backend/Dockerfile
@@ -1,7 +1,7 @@
-FROM python:3
+FROM python:3.5
 ENV PYTHONUNBUFFERED 1
 RUN mkdir /opt/nxg_fec
 WORKDIR /opt/nxg_fec
 ADD . /opt/nxg_fec/
-RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt
 ADD . /opt/nxg_fec/
