--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ local_settings.py
 */hist.txt
 */CACHE
 */package-lock.json
+*.editorconfig
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
