--- a/django-backend/requirements.txt
+++ b/django-backend/requirements.txt
@@ -42,6 +42,7 @@ ptyprocess==0.6.0
 pycparser==2.18
 Pygments==2.2.0
 PyJWT==1.6.4
+python-magic==0.4.15
 pytz==2018.5
 PyYAML==3.13
 requests==2.19.1
