--- a/front-end/Dockerfile-nginx
+++ b/front-end/Dockerfile-nginx
@@ -1,14 +1,5 @@
-#FROM nginx:latest
-#
-##RUN npm install -g gulp bower @angular/cli
-#RUN npm install
-#RUN ng build
-#RUN gulp
-#COPY ./dist/fec-eFilling/ /usr/share/nginx/html
-#COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
-
 # base image
-FROM node:9.6.1
+FROM node:9.6.1 as builder
 
 RUN mkdir /usr/src/app
 WORKDIR /usr/src/app
@@ -26,3 +17,9 @@ COPY . /usr/src/app
 
 # start app
 CMD ng serve --host 0.0.0.0
+
+FROM nginx:latest
+
+COPY --from=builder /usr/src/app/dist /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
