--- a/front-end/Dockerfile-nginx
+++ b/front-end/Dockerfile-nginx
@@ -15,10 +15,10 @@ RUN npm install -g @angular/cli
 # add app
 COPY . /usr/src/app
 
-RUN ng build
+RUN ng build --configuration=awsdev
 
 # start app
-CMD ng serve --host 0.0.0.0
+#CMD ng serve --host 0.0.0.0
 
 FROM nginx:latest
 
