--- a/front-end/Dockerfile-nginx
+++ b/front-end/Dockerfile-nginx
@@ -22,6 +22,11 @@ RUN ng build --configuration=awsdev
 
 FROM nginx:latest
 
+# Copy local nginx config file 
+COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy artifact to nginx default html dir
 COPY --from=builder /usr/src/app/dist/fec-eFilling /usr/share/nginx/html
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
