--- a/front-end/Dockerfile-nginx
+++ b/front-end/Dockerfile-nginx
@@ -15,7 +15,7 @@ RUN npm install -g @angular/cli
 # add app
 COPY . /usr/src/app
 
-RUN ng build --configuration=awsuat
+RUN ng build --configuration=awsdev
 
 # start app
 #CMD ng serve --host 0.0.0.0
