fix to docker-build not exporting the dist dir to nginx/html

--- a/front-end/nginx/nginx.conf
+++ b/front-end/nginx/nginx.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
   location / {
-    root /usr/src/app/dist/fec-eFilling;
+    root /usr/share/nginx/html;
     index index.html index.htm;
     try_files $uri $uri/ /index.html =404;
   }
