--- a/django-backend/requirements.txt
+++ b/django-backend/requirements.txt
@@ -1,5 +1,8 @@
 backcall==0.1.0
 bcrypt==3.1.4
+boto==2.49.0
+boto3==1.9.43
+botocore==1.12.43
 certifi==2018.8.24
 cffi==1.11.5
 chardet==3.0.4
@@ -14,6 +17,7 @@ django-appconf==1.0.1
 django-bootstrap3==11.0.0
 django-compressor==1.6
 django-cors-headers==2.4.0
+django-db-file-storage==0.5.3
 django-rest-swagger==2.2.0
 djangocms-admin-style==1.0.7
 djangorestframework==3.8.2
@@ -32,6 +36,7 @@ MarkupSafe==1.0
 nodeenv==1.3.2
 openapi-codec==1.3.2
 parso==0.3.1
+pdfrw==0.4
 pexpect==4.6.0
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
