--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,3 +29,8 @@ services:
       - "80:80"
     depends_on:
       - api
+  flyway:
+    env_file: ../local.env
+    build: './data'
+    depends_on:
+      - db
