--- a/django-backend/requirements.txt
+++ b/django-backend/requirements.txt
@@ -50,6 +50,7 @@ python-magic==0.4.15
 pytz==2018.5
 PyYAML==3.13
 requests==2.19.1
+retrying==1.3.3
 simplegeneric==0.8.1
 simplejson==3.16.0
 six==1.10.0
