--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,13 +23,13 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@fortawesome/fontawesome-free": "^5.6.1",
     "@kolkov/angular-editor": "^0.11.2",
     "@ng-bootstrap/ng-bootstrap": "^3.2.0",
     "angular-archwizard": "^3.0.0",
     "angular-file-uploader": "^4.1.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
-    "font-awesome": "^4.7.0",
     "json-server": "^0.14.0",
     "jsonwebtoken": "^8.3.0",
     "ngx-bootstrap": "^3.0.1",
