--- a/django-backend/requirements.txt
+++ b/django-backend/requirements.txt
@@ -19,6 +19,7 @@ django-compressor==1.6
 django-cors-headers==2.4.0
 django-db-file-storage==0.5.3
 django-rest-swagger==2.2.0
+django-storages
 djangocms-admin-style==1.0.7
 djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
