--- a/django-backend/requirements.txt
+++ b/django-backend/requirements.txt
@@ -45,6 +45,7 @@ psycopg2==2.7.5
 psycopg2-binary==2.7.5
 ptyprocess==0.6.0
 pycparser==2.18
+PyPDF2==1.26.0
 Pygments==2.2.0
 PyJWT==1.6.4
 python-magic==0.4.15
