--- a/django-backend/requirements.txt
+++ b/django-backend/requirements.txt
@@ -66,6 +66,7 @@ PyYAML==3.13
 regex==2018.11.22
 requests==2.19.1
 requests-toolbelt==0.8.0
+retrying==1.3.3
 s3transfer==0.1.13
 simplegeneric==0.8.1
 simplejson==3.16.0
