--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/fontawesome-free": "^5.6.1",
     "@kolkov/angular-editor": "^0.11.2",
     "@ng-bootstrap/ng-bootstrap": "^3.2.0",
+    "@ng-select/ng-select": "^2.15.2",
     "angular-archwizard": "^3.0.0",
     "angular-file-uploader": "^4.1.3",
     "bootstrap": "^4.1.3",
