--- a/front-end/package.json
+++ b/front-end/package.json
@@ -36,6 +36,7 @@
     "ngx-bootstrap": "^3.0.1",
     "ngx-cookie-service": "^1.0.10",
     "ngx-editor": "^3.3.0",
+    "ngx-pagination": "^3.2.1",
     "ngx-quill": "^3.6.0",
     "popper.js": "^1.14.4",
     "quill": "^1.3.6",
