--- a/front-end/angular.json
+++ b/front-end/angular.json
@@ -80,6 +80,23 @@
               "vendorChunk": false,
               "buildOptimizer": false
             },
+            "awsqa": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.awsqa.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": false
+            },
             "local": {
               "fileReplacements": [
                 {
