--- a/front-end/package.json
+++ b/front-end/package.json
@@ -45,6 +45,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^7.4.3",
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^6.0.3",
