--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,7 +7,7 @@
     "local": "ng serve --configuration=local",
     "build": "ng build",
     "build-local": "ng build --configuration=local",
-    "test": " ng test",
+    "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "json-server": "nodemon ./server/server.js"
@@ -33,13 +33,13 @@
     "core-js": "^2.5.4",
     "json-server": "^0.14.0",
     "jsonwebtoken": "^8.3.0",
-    "ngx-bootstrap": "3.3.0",
+    "ngx-bootstrap": "^3.0.1",
     "ngx-cookie-service": "^1.0.10",
     "ngx-editor": "^3.3.0",
     "ngx-pagination": "^3.2.1",
     "ngx-pipes": "^2.5.0",
     "popper.js": "^1.14.4",
-    "quill": "1.3.6",
+    "quill": "^1.3.6",
     "rxjs": "6.3.3",
     "rxjs-compat": "^6.3.2",
     "web-animations-js": "^2.3.1",
@@ -49,7 +49,7 @@
     "@angular-builders/custom-webpack": "^7.4.3",
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^8.1.3",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -57,7 +57,7 @@
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.2.0",
+    "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
@@ -66,6 +66,6 @@
     "protractor": "^5.4.1",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": ">=3.4.0 <3.5.0"
+    "typescript": "~2.7.2"
   }
 }
