--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -31,7 +31,7 @@ COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /usr/src/app/dist/fec-eFilling /usr/share/nginx/html
 
 # Add a tag at the bottom of index.html if deployed to dev or qa 
-RUN sh -c ' printenv; d=`date`; echo "<!-- ${d} --><!-- ${gitTag} -->" >> /usr/share/nginx/html/index.html '
+RUN sh -c ' d=`TZ=America/New_York date`; echo "<!-- ${d} --><!-- ${gitTag} -->" >> /usr/share/nginx/html/index.html '
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
