--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -22,11 +22,16 @@ RUN ng build --configuration=local
 
 FROM nginx:latest
 
+ARG gitTag=VERDEPLOYED
+
 # Copy local nginx config file
 COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy artifact to nginx default html dir
 COPY --from=builder /usr/src/app/dist/fec-eFilling /usr/share/nginx/html
+
+# Add a tag at the bottom of index.html if deployed to dev or qa 
+RUN sh -c ' d=`TZ=America/New_York date`; echo "<!-- ${d} --><!-- ${gitTag} -->" >> /usr/share/nginx/html/index.html '
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
