--- a/front-end/package.json
+++ b/front-end/package.json
@@ -30,8 +30,10 @@
     "angular-archwizard": "^3.0.0",
     "angular-file-uploader": "^4.1.3",
     "bootstrap": "^4.1.3",
-    "classlist.js": "~1.1.20150312",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
+    "es5-shim": "^4.5.10",
+    "hammerjs": "^2.0.8",
     "json-server": "^0.14.0",
     "jsonwebtoken": "^8.3.0",
     "ngx-bootstrap": "^3.0.1",
@@ -43,7 +45,7 @@
     "quill": "^1.3.6",
     "rxjs": "6.3.3",
     "rxjs-compat": "^6.3.2",
-    "web-animations-js": "~2.3.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -55,7 +57,6 @@
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "classlist.js": "~1.1.20150312",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -68,7 +69,6 @@
     "protractor": "^5.4.1",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "web-animations-js": "~2.3.2",
     "typescript": "~2.7.2"
   }
 }
