--- a/django-backend/requirements.txt
+++ b/django-backend/requirements.txt
@@ -71,3 +71,7 @@ tzlocal==1.5.1
 uritemplate==3.0.0
 urllib3==1.25.3
 wcwidth==0.1.7
+fuzzywuzzy==0.17.0
+python-Levenshtein==0.12.0
+numpy==1.17.2
+pandas==0.25.1
