--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "local": "ng serve --configuration=local",
+    "local_aot": "ng serve --configuration=local --aot",
     "build": "ng build",
     "build-local": "ng build --configuration=local",
     "test": "ng test",
